--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@happyrobot-ai/happyrobot-js",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Happyrobot's JavaScript SDK",
-  "main": "dist/happyrobot.ts",
+  "main": "dist/happyrobot.js",
   "types": "dist/happyrobot.d.ts",
   "scripts": {
     "build": "tsc && tsc --declaration",
